--- a/athlas_mini/CMakeLists.txt
+++ b/athlas_mini/CMakeLists.txt
@@ -99,10 +99,10 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES athlas_mini adc
-#  CATKIN_DEPENDS roscpp std_msgs"
-#  DEPENDS wiringPi
+ INCLUDE_DIRS include
+ LIBRARIES athlas_mini adc
+ CATKIN_DEPENDS roscpp std_msgs
+ DEPENDS wiringPi
 #  DEPENDS system_lib
 )
 
@@ -112,49 +112,49 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-# include_directories(include)
+include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
-#  add_library(athlas_mini
-#    src/athlas_mini.cpp
-#  )
+ add_library(athlas_mini
+   src/athlas_mini.cpp
+ )
 
-#  add_library(adc
-#    src/adc.cpp
-#  )
+ add_library(adc
+   src/adc.cpp
+ )
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
-#  add_dependencies(athlas_mini ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+ add_dependencies(athlas_mini ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-#  target_link_libraries(athlas_mini
-#    ${catkin_LIBRARIES}
-#    wiringPi
-#  )
+ target_link_libraries(athlas_mini
+   ${catkin_LIBRARIES}
+   wiringPi
+ )
 
-#  target_link_libraries(adc
-#    ${catkin_LIBRARIES}
-#    wiringPi
-#  )
+ target_link_libraries(adc
+   ${catkin_LIBRARIES}
+   wiringPi
+ )
 
 ## Declare a C++ executable
-#  add_executable(athlas_mini_node src/athlas_mini_node.cpp)
+ add_executable(athlas_mini_node src/athlas_mini_node.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-#  add_dependencies(athlas_mini_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+ add_dependencies(athlas_mini_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-#  target_link_libraries(athlas_mini_node
-#    ${catkin_LIBRARIES}
-#    athlas_mini
-#    adc
-#    wiringPi
-#  )
+ target_link_libraries(athlas_mini_node
+   ${catkin_LIBRARIES}
+   athlas_mini
+   adc
+   wiringPi
+ )
 
 #############
 ## Install ##
